# CMake-Demo

./: .gitignore  README.md
Demo1/: CMakeLists.txt  main.cpp
Demo2/: CMakeLists.txt
Demo3/: CMakeLists.txt
Demo3/include/: mymath.h
Demo3/src/: main.cpp
Demo4/: CMakeLists.txt  main.cpp
Demo4/math/: CMakeLists.txt
Demo4/math/src/: mymath.c
Demo5/: .gitignore  CMakeLists.txt  build.properties  build.properties.local.example
Demo5/cmake/: internal_utils.cmake
Demo5/include/Logger/: MLogger.h
Demo5/src/: CMakeLists.txt  main.cc
Demo5/src/Logger/: MLogger.cpp
Demo6/: CMakeLists.txt  main.cc
Demo6/cmake/: libraries.cmake
